--- a/gerenciadorfrontend/src/app/globals.css
+++ b/gerenciadorfrontend/src/app/globals.css
@@ -1,30 +1,40 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --text: #302c54;
+  --background: #fbfbfe;
+  --primary: #33306e;
+  --secondary: #dddbff;
+  --accent: #424252;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --text: #afabd3;
+    --background: #010104;
+    --primary: #9491cf;
+    --secondary: #020024;
+    --accent: #adadbd;
+  }
+
+  html {
+    color-scheme: dark;
   }
 }
 
-html,
-body {
+html, body {
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
+  color: var(--text);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-martian-mono);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 * {
+  transition: all 0.2s ease-in-out;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -35,8 +45,38 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.logo {
+  padding: 10px;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+
+  font-family: var(--font-martian-mono);
+}
+
+.content {
+  margin-top: 2rem;
+}
+
+.caixaBackgroundColor {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  width: 100vw;
+  background-color: var(--background);
+
+  position: fixed;
+  top: 0;
+}
+
+.botaoBackgroundColor {
+  cursor: pointer;
+  font-family: var(--font-martian-mono);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
 }
