--- a/gerenciadorfrontend/src/app/globals.css
+++ b/gerenciadorfrontend/src/app/globals.css
@@ -6,19 +6,14 @@
   --accent: #424252;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --text: #afabd3;
-    --background: #010104;
-    --primary: #9491cf;
-    --secondary: #020024;
-    --accent: #adadbd;
-  }
-
-  html {
-    color-scheme: dark;
-  }
+:root[data-theme="dark"] {
+  --text: #afabd3;
+  --background: #010104;
+  --primary: #9491cf;
+  --secondary: #020024;
+  --accent: #adadbd;
 }
+
 
 html, body {
   max-width: 100vw;
@@ -46,12 +41,11 @@ a {
 }
 
 .logo {
-  padding: 10px;
   max-width: 100vw;
   display: flex;
   justify-content: center;
 
-  font-family: var(--font-martian-mono);
+  padding: 10px;
 }
 
 .content {
@@ -61,20 +55,153 @@ a {
 .caixaBackgroundColor {
   display: flex;
   justify-content: center;
-  padding: 10px;
+  
   width: 100vw;
   background-color: var(--background);
 
+  padding: 10px;
   position: fixed;
   top: 0;
 }
 
 .botaoBackgroundColor {
-  cursor: pointer;
-  font-family: var(--font-martian-mono);
   display: flex;
   align-items: center;
+  cursor: pointer;
   gap: 10px;
+
+  user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .botaoBackgroundColor:hover {
+    transform: scale(1.03);
+  }
+
+  .logo:hover {
+    transform: scale(1.03);
+  }
+}
+
+.card {
+  width: 80vw;
+
+  overflow: hidden;
+  overflow-y: scroll;
+
+  box-shadow: var(--text) 0px 2px 5px 0px;
+  border-radius: 7px;
+  padding: 10px;
+
+  margin-bottom: 15px;
+  font-size: larger;
+}
+
+.inputBox {
+  border: solid var(--primary) 1px;
+  border-radius: 7px;
+
+  font-family: var(--font-martian-mono);
+  font-size: large;
+  padding: 7px;
+}
+
+.formItem {
+  display: flex;
+  flex-direction: column;
+
+  padding: 10px 3px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  height: 65vh;
+  padding: 10px;
+}
+
+.mainForm {
+    display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  height: 75vh;
+  padding: 10px;
+}
+
+.mainButton {
+  background-color: var(--text);
+  color: var(--background);
+
+  width: 50px;
+  height: 50px;
+
+  border-radius: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.controlsPaginacao {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+  gap: 5px;
+}
+
+.buttonConfirmar {
+  height: 50px;
+
+  font-size: larger;
+  font-family: var(--font-martian-mono);
+
+  color: var(--text);
+  background-color: var(--background);
+  border: solid var(--text) 1px;
+  border-radius: 7px;
+
+  cursor: pointer;
+
+  user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+}
+
+.buttonExcluir {
+  height: 50px;
+
+  font-size: larger;
+  font-family: var(--font-martian-mono);
+
+  color: var(--background);
+  background-color: var(--text);
+  border: solid var(--text) 1px;
+  border-radius: 7px;
+
+  cursor: pointer;
+
+  user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+}
+
+.buttonPaginacao {
+  cursor: pointer;
 
   user-select: none;
   -moz-user-select: -moz-none;
