--- a/gerenciadorfrontend/src/app/globals.css
+++ b/gerenciadorfrontend/src/app/globals.css
@@ -85,6 +85,19 @@ a {
   }
 }
 
+.red {
+  color: darkred;
+}
+
+.anchorButton {
+  color: var(--background);
+  background-color: var(--text);
+  padding: 5px;
+  margin: 10px;
+
+  border-radius: 7px;
+}
+
 .card {
   width: 80vw;
 
@@ -127,7 +140,7 @@ a {
 }
 
 .mainForm {
-    display: flex;
+  display: flex;
   flex-direction: column;
 
   justify-content: center;
@@ -138,6 +151,10 @@ a {
 }
 
 .mainButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background-color: var(--text);
   color: var(--background);
 
@@ -145,10 +162,6 @@ a {
   height: 50px;
 
   border-radius: 10px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .text-center {
